src/components/layouts/ContactPage/ContactPage.module.scss
@use '@/styles' as *;

.header {
  max-width: 600px;
}

.description {
  text-align: center;

  p {
    line-height: 1.6;
  }
}

.content {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 48px;
  flex: 1 1 0px;

  @include mq(md) {
    flex-direction: column;
    gap: 32px;
  }
}

.socialMedia {
  max-width: 470px;
  width: 100%;
  height: 100%;
  justify-content: center;

  @include mq(md) {
    height: auto;
  }
}

